--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "lil-gui": "^0.19.1",
+    "stats.js": "^0.17.0",
     "three": "^0.159.0",
     "vite": "^5.0.4"
   }
