--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +14,9 @@
     "stats.js": "^0.17.0",
     "three": "^0.159.0",
     "vite": "^5.0.4"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://pnkapadia64.github.io/solar-3d"
 }
